tests/paczka1/fuzzy1/27392016.err
Error in line 1: S315 S226 95,4
Error in line 3: rqNVgY40 A721 76,3
Error in line 19: DA1sKk2YK A721 15,67
Error in line 22: J5g0 A721 87,7
Error in line 24: 1XhdoPLvZY S226 37,1
